--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Scle Demo</title>
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="index.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Scle Demo</title>
+  <link rel="stylesheet" href="index.css" />
+</head>
+
+<body>
+  <div id="scleRoot"></div>
+  <script src="index.js"></script>
+  <script>
+    // 当 scle 文件准备好以后
+    window.addEventListener('scleloaded', event => {
+      console.log('scle插件已经准备好了');
+    })
+  </script>
+</body>
+
 </html>
