--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Scle Demo</title>
   <link rel="stylesheet" href="index.css" />
+  <script>
+    var importScripts = {
+      asyncScript: [
+        { "url": "./js/SCLELoader/ADFBaseDef.js" },
+        { "url": "./js/SCLELoader/ADFGeomDef.js" },
+        { "url": "./js/SCLELoader/ADFSceneDef.js" },
+        { "url": "./js/SCLELoader/ADFCleParser.js" },
+        { "url": "./js/SCLELoader/ADFMath.js" },
+        { "url": "./js/SCLELoader/ADFGlobal.js" },
+        { "url": "./js/SCLELoader/ADFUSDK.js" }
+      ],
+      syncScript: [
+        { "url": "./js/SCLERender/glmatrix.js" },
+        { "url": "./js/SCLERender/GLSL.js" },
+        { "url": "./js/SCLERender/Global.js" },
+        { "url": "./js/SCLERender/SceneToGLData.js" },
+        { "url": "./js/SCLERender/Camera.js" },
+        { "url": "./js/SCLERender/GLProgram.js" },
+        { "url": "./js/SCLERender/GLRunTime.js" },
+        { "url": "./js/SCLERender/EventAction.js" }
+      ]
+    }
+  </script>
 </head>
 
 <body>
