scle工具栏实现暂存

--- a/public/index.html
+++ b/public/index.html
@@ -6,38 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Scle Demo</title>
   <link rel="stylesheet" href="index.css" />
-  <style>
-    * {
-      touch-action: none;
-    }
-  </style>
-  <!-- <script>
-    var importScripts = {
-      asyncScript: [
-        { "url": "./js/SCLELoader/ADFBaseDef.js" },
-        { "url": "./js/SCLELoader/ADFGeomDef.js" },
-        { "url": "./js/SCLELoader/ADFSceneDef.js" },
-        { "url": "./js/SCLELoader/ADFCleParser.js" },
-        { "url": "./js/SCLELoader/ADFMath.js" },
-        { "url": "./js/SCLELoader/ADFGlobal.js" },
-        { "url": "./js/SCLELoader/ADFUSDK.js" }
-      ],
-      syncScript: [
-        { "url": "./js/SCLERender/glmatrix.js" },
-        { "url": "./js/SCLERender/GLSL.js" },
-        { "url": "./js/SCLERender/Global.js" },
-        { "url": "./js/SCLERender/SceneToGLData.js" },
-        { "url": "./js/SCLERender/Camera.js" },
-        { "url": "./js/SCLERender/GLProgram.js" },
-        { "url": "./js/SCLERender/GLRunTime.js" },
-        { "url": "./js/SCLERender/EventAction.js" }
-      ]
-    }
-  </script> -->
 </head>
 
 <body>
-  <div id="scleRoot"></div>
+  <div id="scleView"></div>
   <!-- 加载js -->
   <script src="index.js"></script>
   <script type="text/javascript" src="./js/SCLELoader/ADFBaseDef.js"></script>
