--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Scle Demo</title>
   <link rel="stylesheet" href="index.css" />
+  <style>
+    #scleView {
+      width: 375px;
+      height: 667px;
+    }
+  </style>
 </head>
 
 <body>
