--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
+    <title>Scle Demo</title>
+    <link rel="stylesheet" href="index.css" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Scle Demo</title>
-  <link rel="stylesheet" href="index.css" />
-  <style>
-    #scleView {
-      width: 375px;
-      height: 667px;
-    }
-  </style>
-</head>
+    <style>
+      /*
+    * 自定义修改scleView 大小及样式
+    *
+    */
+      #scleView {
+        min-width: 80%;
+        height: 100%;
+        float: left;
+      }
+      .content {
+        display: inline-block;
+        width: 20%;
+        height: 100%;
+        padding: 20px;
+        overflow: auto;
+        word-break: break-all;
+      }
 
-<body>
-  <div id="scleView"></div>
-  <!-- 加载js -->
-  <script src="index.js"></script>
-  <script type="text/javascript" src="./js/SCLELoader/ADFBaseDef.js"></script>
-  <script type="text/javascript" src="./js/SCLELoader/ADFGeomDef.js"></script>
-  <script type="text/javascript" src="./js/SCLELoader/ADFSceneDef.js"></script>
-  <script type="text/javascript" src="./js/SCLELoader/ADFCleParser.js"></script>
-  <script type="text/javascript" src="./js/SCLELoader/ADFMath.js"></script>
-  <script type="text/javascript" src="./js/SCLELoader/ADFGlobal.js"></script>
-  <script type="text/javascript" src="./js/SCLELoader/ADFUSDK.js"></script>
-  <script type="text/javascript" src="./js/SCLERender/glmatrix.js"></script>
-  <script type="text/javascript" src="./js/SCLERender/GLSL.js"></script>
-  <script type="text/javascript" src="./js/SCLERender/Global.js"></script>
-  <script type="text/javascript" src="./js/SCLERender/SceneToGLData.js"></script>
-  <script type="text/javascript" src="./js/SCLERender/Camera.js"></script>
-  <script type="text/javascript" src="./js/SCLERender/GLProgram.js"></script>
-  <script type="text/javascript" src="./js/SCLERender/GLRunTime.js"></script>
-  <script type="text/javascript" src="./js/SCLERender/EventAction.js"></script>
+      #scleView.mobile + .content {
+        width: 100%;
+      }
+      #scleView.mobile {
+        width: 100%;
+        height: 450px;
+      }
+    </style>
+  </head>
 
-</body>
+  <body>
+    <div id="scleView"></div>
+    <!-- 加载js -->
+    <div class="content">名称：CMOnline开发包，精彩内容可以自行配置！</div>
 
+
+    <script src="index.js"></script>
+
+    <script type="text/javascript" src="./js/SCLELoader/ADFBaseDef.js"></script>
+    <script type="text/javascript" src="./js/SCLELoader/ADFGeomDef.js"></script>
+    <script
+      type="text/javascript"
+      src="./js/SCLELoader/ADFSceneDef.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="./js/SCLELoader/ADFCleParser.js"
+    ></script>
+    <script type="text/javascript" src="./js/SCLELoader/ADFMath.js"></script>
+    <script type="text/javascript" src="./js/SCLELoader/ADFGlobal.js"></script>
+    <script type="text/javascript" src="./js/SCLELoader/ADFUSDK.js"></script>
+    <script type="text/javascript" src="./js/SCLERender/glmatrix.js"></script>
+    <script type="text/javascript" src="./js/SCLERender/GLSL.js"></script>
+    <script type="text/javascript" src="./js/SCLERender/Global.js"></script>
+    <script
+      type="text/javascript"
+      src="./js/SCLERender/SceneToGLData.js"
+    ></script>
+    <script type="text/javascript" src="./js/SCLERender/Camera.js"></script>
+    <script type="text/javascript" src="./js/SCLERender/GLProgram.js"></script>
+    <script type="text/javascript" src="./js/SCLERender/GLRunTime.js"></script>
+    <script
+      type="text/javascript"
+      src="./js/SCLERender/EventAction.js"
+    ></script>
+  </body>
 </html>
+
+<script>
+  // 移动端设备
+  const mobile =
+    /(iPhone|iPad|iPod|iOS|Android|ipad)/i.test(navigator.userAgent) ||
+    (/(Macintosh)/i.test(navigator.userAgent) && "ontouchend" in document);
+  if (mobile) {
+    // 自定义设置移动端样式
+    document.getElementById("scleView").className = "mobile";
+  }
+
+  /**
+   * 事件监听
+   */
+  window.addEventListener("scleStreamReady", function () {
+    console.log("SCLE 准备就绪");
+  });
+</script>
