透明度条修改

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 	<body>
 		<noscript>您需要启用JavaScript来运行这个应用程序。</noscript>
 		<div id="scleView"></div>
-        <div class="content"></div>
+        <div class="content">名称：CMOnline开发包，精彩内容可以自行配置！</div>
 			<!--
         <script type="text/javascript" src="./js/SCLELoader/ADFBaseDef.js"></script>
         <script type="text/javascript" src="./js/SCLELoader/ADFGeomDef.js"></script>
