增加批注接口

--- a/public/index.html
+++ b/public/index.html
@@ -85,6 +85,15 @@
 					>
 				</div>
 			</div>
+            <div>
+            	批注样式：
+                <select id="notationNode">
+					<option value="">请选择</option>
+					<option value="default">默认（无引线批注）</option>
+					<option value="lead">引线批注</option>
+					<option value="table">表格</option>
+				</select>
+            </div>
 			<div>
 				场景事件：
 				<select id="sceneNode">
