--- a/public/index1.html
+++ b/public/index1.html
@@ -8,19 +8,22 @@
 			name="viewport"
 		/>
 		<meta name="theme-color" content="#000000" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,Chrome=1" />
 		<meta
 			name="description"
 			content="Web site created using create-react-app"
 		/>
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<link rel="stylesheet" href="webgl.css" />
+		<link rel="stylesheet" href="index.css" />
 		<title>Scle Model</title>
+		<script type="text/javascript" src="./index.js"></script>
 	</head>
 	<body>
 		<noscript>您需要启用JavaScript来运行这个应用程序。</noscript>
 		<div id="scleView"></div>
 		<div class="content">名称：CMOnline开发包，精彩内容可以自行配置！</div>
+		
 		<!--
         <script type="text/javascript" src="./js/SCLELoader/ADFBaseDef.js"></script>
         <script type="text/javascript" src="./js/SCLELoader/ADFGeomDef.js"></script>
@@ -40,48 +43,6 @@
      -->
 	</body>
 </html>
-<!--  自定义修改 -->
-<script>
-	// 移动端设备
-	const mobile =
-		/(iPhone|iPad|iPod|iOS|Android|ipad)/i.test(navigator.userAgent) ||
-		(/(Macintosh)/i.test(navigator.userAgent) && 'ontouchend' in document)
-	if (mobile) {
-		// 自定义设置移动端样式
-		document.getElementById('scleView').className = 'mobile'
-	}
-
-	/**
-	 * 事件监听
-	 */
-	window.addEventListener('scleStreamReady', function () {
-		console.log('SCLE 准备就绪')
-	})
-
-	document.addEventListener('touchstart', function (event) {
-		if (event.touches.length > 1) {
-			event.preventDefault()
-		}
-	})
-
-	var lastTouchEnd = 0
-	document.addEventListener(
-		'touchend',
-		function (event) {
-			var now = new Date().getTime()
-			if (now - lastTouchEnd <= 300) {
-				event.preventDefault()
-			}
-			lastTouchEnd = now
-		},
-		false
-	)
-
-	document.addEventListener('gesturestart', function (event) {
-		event.preventDefault()
-	})
-</script>
-
 <!--  SCLE 解析脚本  -->
 <script type="text/javascript" src="./js/SCLELoader/ADFBaseDef.js"></script>
 <script type="text/javascript" src="./js/SCLELoader/ADFGeomDef.js"></script>
