--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 		<title>Scle Model</title>
 		<script type="text/javascript" src="./index.js"></script>
 	</head>
-	<body>
+	<body ontouchmove="event.preventDefault()">
 		<noscript>您需要启用JavaScript来运行这个应用程序。</noscript>
 		<div id="scleView"></div>
 		<div class="content">
