解析文件变更

--- a/public/index.html
+++ b/public/index.html
@@ -149,7 +149,10 @@
 <script type="text/javascript" src="./js/SCLERender/Global.js"></script>
 <script type="text/javascript" src="./js/SCLERender/SceneToGLData.js"></script>
 <script type="text/javascript" src="./js/SCLERender/Camera.js"></script>
+<script type="text/javascript" src="./js/SCLERender/WebGL3D.js"></script>
+<script type="text/javascript" src="js/SCLERender/Canvas2D.js"></script>
 <script type="text/javascript" src="./js/SCLERender/GLProgram.js"></script>
 <script type="text/javascript" src="./js/SCLERender/GLRunTime.js"></script>
 <script type="text/javascript" src="./js/SCLERender/EventAction.js"></script>
+<script type="text/javascript" src="./js/CMOnline.js"></script>
 <script type="text/javascript" src="./local.js"></script>
