--- a/public/index.html
+++ b/public/index.html
@@ -1,123 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-		<meta
-			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;"
-			name="viewport"
-		/>
-		<meta name="theme-color" content="#000000" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,Chrome=1" />
-		<meta
-			name="description"
-			content="Web site created using create-react-app"
-		/>
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<link rel="stylesheet" href="index.css" />
-		<title>Scle Model</title>
-		<script type="text/javascript" src="./index.js"></script>
-	</head>
-	<body ontouchmove="event.preventDefault()">
-		<noscript>您需要启用JavaScript来运行这个应用程序。</noscript>
-		<div id="scleView"></div>
-		<div class="content">
-			<div class="upload-group">
-				<div
-					class="ant-upload ant-upload-select ant-upload-select-text"
-				>
-					<span tabindex="0" class="ant-upload" role="button"
-						><input
-							type="file"
-							accept=""
-							style="display: none"
-							id="scleFile"
-						/><button
-							type="button"
-							class="ant-btn"
-							onclick="scleFile.click()"
-						>
-							<i class="anticon anticon-upload"
-								><svg
-									viewBox="64 64 896 896"
-									focusable="false"
-									data-icon="upload"
-									width="1em"
-									height="1em"
-									fill="currentColor"
-									aria-hidden="true"
-								>
-									<path
-										d="M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 0 0-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
-									></path></svg></i
-							><span>上传scle文件</span>
-						</button></span
-					>
-				</div>
-				<div
-					class="ant-upload ant-upload-select ant-upload-select-text"
-				>
-					<span tabindex="0" class="ant-upload" role="button"
-						><input
-							type="file"
-							accept=""
-							style="display: none"
-							id="scleXMLFile"
-						/><button
-							type="button"
-							class="ant-btn"
-							onclick="scleXMLFile.click()"
-						>
-							<i class="anticon anticon-upload"
-								><svg
-									viewBox="64 64 896 896"
-									focusable="false"
-									data-icon="upload"
-									width="1em"
-									height="1em"
-									fill="currentColor"
-									aria-hidden="true"
-								>
-									<path
-										d="M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 0 0-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
-									></path></svg></i
-							><span>上传XML文件</span>
-						</button></span
-					>
-				</div>
+
+<head>
+	<meta charset="utf-8" />
+	<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
+	<meta name="theme-color" content="#000000" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,Chrome=1" />
+	<meta name="description" content="Web site created using create-react-app" />
+	<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+	<link rel="stylesheet" href="index.css" />
+	<title>Scle Model</title>
+	<script type="text/javascript" src="./index.js"></script>
+</head>
+
+<body ontouchmove="event.preventDefault()">
+	<noscript>您需要启用JavaScript来运行这个应用程序。</noscript>
+	<div id="scleView"></div>
+	<div class="content">
+		<div class="upload-group">
+			<div class="ant-upload ant-upload-select ant-upload-select-text">
+				<span tabindex="0" class="ant-upload" role="button"><input type="file" accept="" style="display: none"
+						id="scleFile" /><button type="button" class="ant-btn" onclick="scleFile.click()">
+						<i class="anticon anticon-upload"><svg viewBox="64 64 896 896" focusable="false"
+								data-icon="upload" width="1em" height="1em" fill="currentColor" aria-hidden="true">
+								<path
+									d="M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 0 0-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z">
+								</path>
+							</svg></i><span>上传scle文件</span>
+					</button></span>
 			</div>
-			<div>
-				批注样式：
-				<select id="notationNode">
-					<option value="">请选择</option>
-					<option value="default">默认（无引线批注）</option>
-					<option value="lead">引线批注</option>
-					<option value="table">表格</option>
-				</select>
+			<div class="ant-upload ant-upload-select ant-upload-select-text">
+				<span tabindex="0" class="ant-upload" role="button"><input type="file" accept="" style="display: none"
+						id="scleXMLFile" /><button type="button" class="ant-btn" onclick="scleXMLFile.click()">
+						<i class="anticon anticon-upload"><svg viewBox="64 64 896 896" focusable="false"
+								data-icon="upload" width="1em" height="1em" fill="currentColor" aria-hidden="true">
+								<path
+									d="M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 0 0-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z">
+								</path>
+							</svg></i><span>上传XML文件</span>
+					</button></span>
 			</div>
-			<div>
-				场景事件：
-				<select id="sceneNode">
-					<option>暂无场景</option>
-				</select>
-			</div>
-			<table class="partListTable">
-				<thead class="ant-table-thead" id="partListHeader">
-					<tr>
-						<th>序号</th>
-						<th>名称</th>
-						<th>数量</th>
-					</tr>
-				</thead>
-				<tbody class="ant-table-tbody" id="partList">
-					<tr class="ant-table-row">
-						<td colspan="3">暂无数据</td>
-					</tr>
-				</tbody>
-			</table>
 		</div>
-		<!--
+		<div>
+			批注样式：
+			<select id="notationNode">
+				<option value="">请选择</option>
+				<option value="default">默认（无引线批注）</option>
+				<option value="lead">引线批注</option>
+				<option value="table">表格</option>
+			</select>
+		</div>
+		<div>
+			场景事件：
+			<select id="sceneNode">
+				<option>暂无场景</option>
+			</select>
+		</div>
+		<table class="partListTable">
+			<thead class="ant-table-thead" id="partListHeader">
+				<tr>
+					<th>序号</th>
+					<th>名称</th>
+					<th>数量</th>
+				</tr>
+			</thead>
+			<tbody class="ant-table-tbody" id="partList">
+				<tr class="ant-table-row">
+					<td colspan="3">暂无数据</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+	<!--
         <script type="text/javascript" src="./js/SCLELoader/ADFBaseDef.js"></script>
         <script type="text/javascript" src="./js/SCLELoader/ADFGeomDef.js"></script>
         <script type="text/javascript" src="./js/SCLELoader/ADFSceneDef.js"></script>
@@ -134,8 +90,34 @@
         <script type="text/javascript" src="./js/SCLERender/GLRunTime.js"></script>
         <script type="text/javascript" src="./js/SCLERender/EventAction.js"></script>
      -->
-	</body>
+</body>
+
 </html>
+<!-- <script>
+	const mobile =
+		/(iPhone|iPad|iPod|iOS|Android|ipad)/i.test(navigator.userAgent) ||
+		(/(Macintosh)/i.test(navigator.userAgent) && 'ontouchend' in document)
+	mobile && (document.getElementById('scleView').className = 'mobile'),
+		window.addEventListener('scleStreamReady', function () {
+			console.log('SCLE 准备就绪')
+		}),
+		
+		document.addEventListener('touchstart', function (e) {
+			e.touches.length > 1 && e.preventDefault()
+		})
+	var lastTouchEnd = 0
+	document.addEventListener(
+		'touchend',
+		function (e) {
+			var t = new Date().getTime()
+			t - lastTouchEnd <= 300 && e.preventDefault(), (lastTouchEnd = t)
+		},
+		!1
+	),
+		document.addEventListener('gesturestart', function (e) {
+			e.preventDefault()
+		})
+</script> -->
 <!--  SCLE 解析脚本  -->
 <script type="text/javascript" src="./js/SCLELoader/ADFBaseDef.js"></script>
 <script type="text/javascript" src="./js/SCLELoader/ADFGeomDef.js"></script>
