--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,12 @@
 	<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 	<link rel="stylesheet" href="index.css" />
+	<link href="js/UI/css/app.css" rel="stylesheet" type="text/css"/>
+	<link rel="stylesheet" href="js/UI/css/CMOnlineUI.css" type="text/css">
+	<!-- CMOnline UI   -->
+	<script type="text/javascript" src="js/UI/CMvendor.js"></script>
+	<script type="text/javascript" src="js/UI/app.js"></script>
 	<title>Scle Model</title>
-	<script type="text/javascript" src="./index.js"></script>
 </head>
 
 <body ontouchmove="event.preventDefault()">
@@ -118,7 +122,8 @@
 			e.preventDefault()
 		})
 </script> -->
-<!--  SCLE 解析脚本  -->
+<script type="text/javascript" src="./index.js"></script>
+<!-- SCLE 解析脚本  -->
 <script type="text/javascript" src="./js/SCLELoader/ADFBaseDef.js"></script>
 <script type="text/javascript" src="./js/SCLELoader/ADFGeomDef.js"></script>
 <script type="text/javascript" src="./js/SCLELoader/ADFSceneDef.js"></script>
