--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 	<meta name="description" content="Web site created using create-react-app" />
 	<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-	<link rel="stylesheet" href="index.css" />
+	<link rel="stylesheet" href="default.css" />
 	<link href="js/UI/css/app.css" rel="stylesheet" type="text/css"/>
 	<link rel="stylesheet" href="js/UI/css/CMOnlineUI.css" type="text/css">
 	<!-- CMOnline UI   -->
