--- a/public/index.html
+++ b/public/index.html
@@ -122,6 +122,7 @@
 			e.preventDefault()
 		})
 </script> -->
+<script type="text/javascript" src="js/base64/base64.js"></script>
 <script type="text/javascript" src="./index.js"></script>
 <!-- SCLE 解析脚本  -->
 <script type="text/javascript" src="js/SCLELoader/ADFBaseDef.js"></script>
@@ -157,7 +158,7 @@
 				await this.sleep(1000);
 			}
 			// 加载CLE文件
-			window.CM_LIB.CMInitData(data);
+			window.CM_LIB.CMInitData(data,  "115YyX45Lqs5Zyc5pmW56eR5oqA5pyJ6ZmQ5YWs5Y+4");
 		}
 	};
 	if (g_CLEModule) {
