fix: 更新插件、标注项

--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,16 @@
 
 <head>
 	<meta charset="utf-8" />
-	<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+	<!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
 	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
 	<meta name="theme-color" content="#000000" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,Chrome=1" />
 	<meta name="description" content="Web site created using create-react-app" />
-	<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+	<!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 	<link rel="stylesheet" href="default.css" />
-	<title>Scle Model</title>
+	<link href="CMOnlineToolkit/UI/css/app.css" rel="stylesheet" />
+	<title>3D Model</title>
 </head>
 
 <body ontouchmove="event.preventDefault()">
