--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 	<!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 	<link rel="stylesheet" href="default.css" />
-	<link href="CMOnlineToolkit/UI/css/app.css" rel="stylesheet" />
+	<link href="P3DToolkit/UI/css/app.css" rel="stylesheet" />
 	<title>3D Model</title>
 </head>
 
@@ -118,7 +118,7 @@
 			e.preventDefault()
 		})
 </script> -->
-<script type="text/javascript" src="CMOnlineToolkit/CMOnline.js"></script>
+<script type="text/javascript" src="P3DToolkit/P3DToolkit.js"></script>
 
 <script type="text/javascript" src="./local.js"></script>
 <script type="text/javascript" src="./index.js"></script>
