--- a/public/index.html
+++ b/public/index.html
@@ -18,20 +18,21 @@
 <body ontouchmove="event.preventDefault()">
 	<noscript>您需要启用JavaScript来运行这个应用程序。</noscript>
 	<div id="scleView"></div>
+	<!-- <div class="content">名称：CMOnline开发包，精彩内容可以自行配置！</div> -->
 	<div class="content">
-		<div class="upload-group">
-			<div class="ant-upload ant-upload-select ant-upload-select-text">
-				<span tabindex="0" class="ant-upload" role="button"><input type="file" accept="" style="display: none"
-						id="scleFile" /><button type="button" class="ant-btn" onclick="scleFile.click()">
-						<i class="anticon anticon-upload"><svg viewBox="64 64 896 896" focusable="false"
-								data-icon="upload" width="1em" height="1em" fill="currentColor" aria-hidden="true">
-								<path
-									d="M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 0 0-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z">
-								</path>
-							</svg></i><span>上传scle文件</span>
-					</button></span>
-			</div>
-			<div class="ant-upload ant-upload-select ant-upload-select-text">
+		<!-- <div class="upload-group"> -->
+		<div class="ant-upload ant-upload-select ant-upload-select-text">
+			<span tabindex="0" class="ant-upload" role="button"><input type="file" accept="" style="display: none"
+					id="scleFile" /><button type="button" class="ant-btn" onclick="scleFile.click()">
+					<i class="anticon anticon-upload"><svg viewBox="64 64 896 896" focusable="false" data-icon="upload"
+							width="1em" height="1em" fill="currentColor" aria-hidden="true">
+							<path
+								d="M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 0 0-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z">
+							</path>
+						</svg></i><span>打开三维模型</span>
+				</button></span>
+		</div>
+		<!-- <div class="ant-upload ant-upload-select ant-upload-select-text">
 				<span tabindex="0" class="ant-upload" role="button"><input type="file" accept="" style="display: none"
 						id="scleXMLFile" /><button type="button" class="ant-btn" onclick="scleXMLFile.click()">
 						<i class="anticon anticon-upload"><svg viewBox="64 64 896 896" focusable="false"
@@ -41,9 +42,9 @@
 								</path>
 							</svg></i><span>上传XML文件</span>
 					</button></span>
-			</div>
-		</div>
-		<div>
+			</div> -->
+		<!-- </div> -->
+		<!-- <div>
 			批注样式：
 			<select id="notationNode">
 				<option value="">请选择</option>
@@ -72,8 +73,8 @@
 				</tr>
 			</tbody>
 		</table>
-	</div>
-	<!--
+	</div> -->
+		<!--
         <script type="text/javascript" src="./js/SCLELoader/ADFBaseDef.js"></script>
         <script type="text/javascript" src="./js/SCLELoader/ADFGeomDef.js"></script>
         <script type="text/javascript" src="./js/SCLELoader/ADFSceneDef.js"></script>
